# factorResearch

./: .env  .env.example  .gitignore  0001-market-cap-screener-wiring.patch  AGENCY_AUDIT.md  AGENTS.md  AI_CONTEXT.md  AI_WORKFLOW.md  AUTHENTICATION_SETUP.md  Build-vs-Buy-and-No-Reinvention-Policy.md  CODES_DEEP_AUDIT.md  CONTRIBUTING.md  KNOWN_ISSUES.md  METHODOLOGY.MD  PONYTAIL_AUDIT.md  PRODUCTION_GRADE_PROOF_PLAN.md  PROJECT_MAP.md  Procfile  Publish.md  README.md  README_FRANCE.md  README_GERMANY.md  README_NETHERLANDS.md  RELEASE_NOTES.md  SCORING_METHODOLOGY.md  SECURITY_ATTACK_AUDIT.md  SECURITY_CHECKLIST.md  SECURITY_IMPLEMENTATION.md  SECURITY_SUMMARY.md  SETUP_QUANT.md  alpha_vantage_client.py  app.py  apply_insider_wire.py  apply_security_fixes.py  cache.py  capabilities.json  feature_flags.json  feature_management.json  fix.patch  graham.py  (+16 more)
.cache/: analysis-adbe.json  analysis-adi.json  analysis-adp.json  analysis-adsk.json  analysis-afl.json  analysis-ait.json  analysis-amat.json  analysis-amgn.json  analysis-amp.json  analysis-amzn.json  analysis-anet.json  analysis-aon.json  analysis-aos.json  analysis-aph.json  analysis-app.json  analysis-axp.json  analysis-cb.json  analysis-cboe.json  analysis-cdns.json  analysis-cdw.json  analysis-cf.json  analysis-chd.json  analysis-chrw.json  analysis-clx.json  analysis-cmcsa.json  analysis-cme.json  analysis-cpay.json  analysis-cprt.json  analysis-csl.json  analysis-ctas.json  analysis-deck.json  analysis-ea.json  analysis-ecl.json  analysis-eme.json  analysis-ens.json  analysis-eog.json  analysis-fast.json  analysis-fds.json  analysis-fitb.json  analysis-fix.json  (+2437 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
assets/: _accordion.scss  _buttons-badges.scss  _cards-panels.scss  _colors.scss  _forms.scss  _landing_tokens.scss  _layout.scss  _media.scss  _mixins.scss  _modals.scss  _progress-bars.scss  _screener-table.scss  _typography.scss  accordion.css  adaptive_loading.js  company_analysis.css  company_analysis.scss  components.css  iiq.js  (+26 more)
native/factorresearch_core/: Cargo.toml  deny.toml
native/factorresearch_core/src/: lib.rs  schema.rs
(+697 files in other folders)
