[project]
name = "factorresearch"
version = "1.0.0"
description = "Cenvarn financial research application"
requires-python = ">=3.12,<3.14"
dependencies = [
  "dash>=4.4,<5",
  "plotly>=6.9,<7",
  "pandas>=3.0.3,<4",
  "pyarrow>=25,<26",
  "numpy>=2.5.1,<3",
  "requests>=2.34.2,<3",
  "python-dotenv>=1.2.2,<2",
  "gunicorn>=26,<27",
  "jinja2>=3.1.6,<4",
  "lxml>=6.1.1,<7",
  "finnhub-python>=2.4.20,<3",
  "psycopg[binary]>=3.3.4,<4",
  "pyjwt[crypto]>=2.13,<3",
  "flask-limiter>=4.1.1,<5",
  "redis>=8.0.1,<9",
  "cryptography>=49,<50",
  "markupsafe>=3,<4",
  "werkzeug>=3.1.8,<4",
  "flask>=3.1.3,<4",
  "stripe>=15.3.1,<16",
]

[dependency-groups]
dev = [
  "bandit>=1.8,<2",
  "coverage>=7.10,<8",
  "cyclonedx-bom>=7,<8",
  "hypothesis>=6.135,<7",
  "locust>=2.32,<3",
  "mypy>=1.17,<2",
  "pip-audit>=2.10,<3",
  "pytest>=9,<10",
  "pyyaml>=6,<7",
  "ruff>=0.12,<1",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.12"
strict = true
follow_imports = "skip"
warn_unused_configs = true
files = [
  "codes/core/arrow_contracts.py",
  "codes/core/canonical_adapters.py",
  "codes/core/ports.py",
  "codes/composition.py",
  "codes/data/providers/sec_universe.py",
  "codes/domain/canonical.py",
  "codes/services/product_analytics.py",
  "codes/app_modules/analytics_context.py",
  "codes/app_modules/composition.py",
]
