[package]
name = "factorresearch_core"
version = "0.1.0"
edition = "2024"
license = "Proprietary"
publish = false

[dependencies]
rust_decimal = { version = "1", default-features = false, features = ["std", "serde", "serde-with-str"] }
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
